--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <title>grindbuild</title>
   </head>
-  <body><p align="center"><iframe src="https://html5.gamedistribution.com/ba9eba4f79f947c9a57921eb06d75cac/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/grindcraft-remastered.html" id="iframe"></iframe></p></body>
+  <body><p align="center"><iframe src="https://html5.gamedistribution.com/ba9eba4f79f947c9a57921eb06d75cac/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/grindcraft-remastered.html" width="1200" height="800" id="iframe"></iframe></p></body>
 </html>
 
